--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 }
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("images/amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100%;
@@ -144,7 +144,7 @@
 
 /* hero-section */
 .hero-section{
-    background-image: url("hero_image.jpg");
+    background-image: url("images/hero_image.jpg");
     background-size: cover; /*fit to the screen size */
     height: 380px;
     display: flex;
@@ -247,7 +247,7 @@ ul a {
     align-items: center;
 }
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("images/amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100px;
